Update path of database and data models

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEON_DATABASE_URL=postgresql://onfolioDB_owner:xQKbm2dHDMV6@ep-sparkling-wind-a5jz1x49.us-east-2.aws.neon.tech/onfolioDB?sslmode=require
+NEON_DATABASE_URL= postgresql://onpholioDB_owner:2xVy7tvgilEA@ep-white-haze-a5i01hru.us-east-2.aws.neon.tech/onpholioDB?sslmode=require
