chore: Update database URL and add PORT to .env file, fix HTTP server URL in index.ts, and update package.json

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEON_DATABASE_URL= postgresql://onpholioDB_owner:2xVy7tvgilEA@ep-white-haze-a5i01hru.us-east-2.aws.neon.tech/onpholioDB?sslmode=require
+PORT= 8080
