--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "onpholio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsup src",
+    "start": "tsx src/index.ts",
+    "lint": "eslint src --ext .ts",
+    "test": "jest"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.1",
@@ -19,12 +22,17 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "drizzle-kit": "^0.20.17",
     "eslint": "^8.57.0",
     "pg": "^8.11.5",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
+    "tsx": "^4.9.3",
     "typescript": "^5"
   }
 }
